# harbour-wiki

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  PIPELINE.md  README.md  miccheck.py  package.json  pnpm-lock.yaml  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md
app/: globals.css  layout.tsx  page.tsx
app/connect/: page.tsx
capture/: .env.example  .gitignore  LECTURE_PC_SETUP.md  README.md  ptz_keyboard.py  pyproject.toml  schedule.example.json
capture/lecture_capture/: __init__.py  aiming.py  audio.py  camera.py  camera_cli.py  cli.py  config.py  control.py  gateway.py  knottra_client.py  outbox.py  remote_control.py  scheduler.py  simulate.py  start_lecture.py  stop_lecture.py  winptz.py  zoom_watcher.py
capture/scripts/: run-cameras.sh
capture/tests/: test_aiming.py  test_audio.py  test_camera.py  test_outbox.py  test_scheduler.py  test_transcribe.py
components/: CourseSearch.tsx  CourseSeed.tsx  SessionEntry.tsx
harbour-wiki/: .dockerignore  .gitignore  .npmrc  Dockerfile  package.json  pnpm-lock.yaml
harbour-wiki/app/: globals.css  page.tsx
harbour-wiki/components/: Annotations.tsx  AskBox.tsx  CaptureDashboard.tsx  DeleteConcept.tsx  FeedbackButtons.tsx  LiveBadge.tsx  LiveRefresh.tsx  Markdown.tsx  SearchAsk.tsx
harbour-wiki/docs/: DEPLOY-RAILWAY.md  MCP.md
harbour-wiki/extension/: README.md  (+3 more)
lecture_capture/: audio.py  camera.py  camera_cli.py  cli.py  config.py  gateway.py  transcribe.py
lib/: aggregate.ts  courses.ts  db.ts  lectures.ts  narrative.ts  sample.ts
scripts/: ship.sh
tests/: test_camera.py  test_transcribe.py
(+49 files in other folders)
