[project]
name = "lecture-capture"
version = "0.1.0"
description = "Native lecture recorder: mic -> local Whisper -> Knottra speech events."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "opencv-python>=4.9",
    "pygrabber>=0.2; sys_platform == 'win32'",
    "ultralytics>=8.4.96",
]

[project.scripts]
lecture-capture = "lecture_capture.cli:main"
lecture-simulate = "lecture_capture.simulate:main"
lecture-camera = "lecture_capture.camera_cli:main"
lecturectl = "lecture_capture.control:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lecture_capture"]

[dependency-groups]
dev = ["pytest>=8.3"]
